<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bournedev.masterscanner.BluetoothActivity">

    <Switch
        android:id="@+id/trans_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:showText="true"
        android:textOff="@string/scanner"
        android:textOn="@string/transmitter"
        android:textSize="24sp"
        android:thumb="@drawable/custom_selector"
        android:track="@drawable/custom_track"/>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_below="@+id/trans_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="15dp"
        android:orientation="horizontal" >

            <Button
                android:id="@+id/start_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:padding="5dp"
                android:background="@drawable/round_button"
                android:enabled="true"
                android:textColor="@color/font_color"
                android:text="@string/start_scan" />

            <Button
                android:id="@+id/stop_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                style="?android:attr/buttonBarButtonStyle"
                android:padding="5dp"
                android:background="@drawable/round_button"
                android:textColor="@color/font_color"
                android:text="@string/stop_scan" />

        </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:drawSelectorOnTop="false"
            android:listSelector="@android:color/darker_gray" >
        </ListView>
    </LinearLayout>

</RelativeLayout>
